This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: does not build on OpenBSD with no value defined for PY_GETENTROPY
Type: compile error Stage: patch review
Components: Versions: Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: martin.panter, python-dev, rpointel, vstinner
Priority: normal Keywords:

Created on 2015-09-18 23:16 by rpointel, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
Python_random_c rpointel, 2015-09-18 23:16 define the value 1 for PY_GETENTROPY review
Python_random_c rpointel, 2015-09-30 19:17 review
Messages (5)
msg251040 - (view) Author: Remi Pointel (rpointel) * Date: 2015-09-18 23:16
Hi,

I'm trying to build Python on OpenBSD-current, but it does not build because it seems that PY_GETENTROPY does not have a value.

$ make
...
gcc -pthread -c -fno-strict-aliasing -Wsign-compare -Wunreachable-code -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes  -O2 -pipe   -Werror=declaration-after-statement   -I. -IInclude -I./Include    -DPy_BUILD_CORE -o Python/random.o Python/random.c
Python/random.c:367:20: error: #if with no expression
Python/random.c: In function '_PyOS_URandom':
Python/random.c:370: warning: implicit declaration of function 'dev_urandom_python'
Python/random.c:414:20: error: #if with no expression
Python/random.c: In function '_PyRandom_Init':
Python/random.c:417: warning: implicit declaration of function 'dev_urandom_noraise'
Python/random.c:430:20: error: #if with no expression
Python/random.c: In function '_PyRandom_Fini':
Python/random.c:433: warning: implicit declaration of function 'dev_urandom_close'
*** Error 1 in /home/remi/dev/cpython (Makefile:1534 'Python/random.o')

If I defined the PY_GETENTROPY to the value "1" line 76, it seems to works fine.

Remi.
msg251622 - (view) Author: Martin Panter (martin.panter) * (Python committer) Date: 2015-09-25 23:23
Patch looks sensible to me, although I notice the rest of that module tends to prefer the #elif defined(PY_GETENTROPY) style. It looks like this might be introduced with Issue 25003.
msg251958 - (view) Author: Remi Pointel (rpointel) * Date: 2015-09-30 19:17
Attached is the diff to use defined(PY_GETENTROPY) instead of #define PY_GETENTROPY 1.
msg251959 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2015-09-30 20:08
New changeset e4ac5a899657 by Victor Stinner in branch 'default':
Issue #25171: Fix compilation issue on OpenBSD in random.c
https://hg.python.org/cpython/rev/e4ac5a899657
msg252000 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2015-10-01 06:50
Thanks Remi for your fix, the compilation succeeded on the buildbot. Sorry for the regression.
History
Date User Action Args
2022-04-11 14:58:21adminsetgithub: 69358
2015-10-01 06:50:59vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg252000
2015-09-30 20:08:05python-devsetnosy: + python-dev
messages: + msg251959
2015-09-30 19:17:07rpointelsetfiles: + Python_random_c

messages: + msg251958
2015-09-25 23:23:53martin.pantersetnosy: + vstinner, martin.panter
messages: + msg251622

type: compile error
stage: patch review
2015-09-18 23:16:15rpointelcreate