Issue #25171: Fix compilation issue on OpenBSD in random.c

Patch written by Remi Pointel.